Added LocationForm component and updated Navbar

--- a/routecast-frontend/public/index.html
+++ b/routecast-frontend/public/index.html
@@ -19,6 +19,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+<!-- public/index.html -->
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVJJnLIe-gzXAIcHIFSV0ZhL_OktmZ8lk&libraries=places"
+  async
+  defer
+></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
